# Skeleton

./: CMakeLists.txt
Header files/: Game.h
app/: main.cpp
inc/: Game.h
lib/: Game.cpp
